# symbolic-manipulation-engine

./: .gitignore  70  Cargo.toml  README.md
benches/: benches.rs
bindings/: DerivedDisplayProvenance.ts  DisplayGeneratedType.ts  DisplayInterpretation.ts  DisplayProvenance.ts  DisplaySymbolNode.ts  DisplayTransformationLattice.ts  DisplayTransformationLatticeLink.ts  DisplayTransformationLatticeNode.ts  DisplayTypeHierarchyNode.ts  DisplayWorkspace.ts  ExpressionType.ts  GeneratedTypeCondition.ts  InterpretationCondition.ts  InterpretedType.ts  Token.ts  Type.ts
src/: config.rs  constants.rs  custom_serde.rs  lib.rs  main.rs
src/cli/: cli.rs  filesystem.rs  history.rs  mod.rs
src/context/: context.rs
src/parsing/: interpretation.rs  mod.rs  parser.rs  tokenizer.rs
src/statement/: mod.rs  statement.rs  symbol_type.rs
src/symbol/: algorithm.rs  mod.rs  symbol_node.rs  symbol_type.rs  transformation.rs
src/workspace/: mod.rs  workspace.rs
tests/: integration_tests.rs
tests/assets/test_add_algorithm_works/.sme/: test_input.toml  workspace.toml
tests/assets/test_add_algorithm_works/.sme_test_output/: workspace.toml
tests/assets/test_adds_to_both_sides/.sme/: test_input.toml  workspace.toml
tests/assets/test_algorithm_applies/.sme/: test_input.toml  workspace.toml
tests/assets/test_applies_joint_transforms/.sme/: test_input.toml  workspace.toml
tests/assets/test_duplicates_interpretations/.sme/: test_input.toml
tests/assets/test_evaluation_works/.sme/: test_input.toml
tests/assets/test_removes_statements_and_dependents/.sme/: test_input.toml
(+7 files in other folders)
