[package]
name = "symbolic-manipulation-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.6"
ctor = "0.2.8"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.116"
toml = "0.7.2"
ts-rs = "8.1.0"

[dev-dependencies]
env_logger = "0.11.5"
